--- a/frontend/client/package.json
+++ b/frontend/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "react": "^17.0.1",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-google-login": "^5.1.25",
     "react-router": "^5.2.0",
